<resources>
    <string name="app_name" translatable="false">COVIDAILY</string>
    <string name="title_home">Home</string>
    <string name="title_news">News</string>
    <string name="title_saved">Saved</string>
    <string name="title_settings">Settings</string>
    <string name="channel_name" translatable="false">DAILY_CASES</string>
    <string name="channel_description" translatable="false">daily number of cases notification</string>
    <string name="voice">Voice</string>
    <string name="search">Search</string>
    <string name="confirmed">Confirmed</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="notification_preference">Enable daily notifications</string>
    <string name="build_preference">Build version</string>
    <plurals name="home_stats">
        <item quantity="one">There is %1$d new case in\u0020</item>
        <item quantity="other">There are %1$d new cases in\u0020</item>
    </plurals>
</resources>
